Se agrega nueva App con Django Comando= python manage startproject serviciosapp

--- a/webmundo/webapp/templates/webapp/tienda.html
+++ b/webmundo/webapp/templates/webapp/tienda.html
@@ -1,8 +1,7 @@
-{% extends "webapp/base.html" %}
-{% load static %}
+{% extends "webapp/base.html" %} {% load static %} {% block content %}
 
-{% block content %}
+<div class="container bg-dark">
 
-Tienda
+</div>
 
 {% endblock %}
