--- a/webmundo/webapp/templates/webapp/base.html
+++ b/webmundo/webapp/templates/webapp/base.html
@@ -55,6 +55,9 @@
           <li class="nav-item  {% if request.path == '/blog' %} active {% endif %} px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="{% url 'blog' %}">Blog</a>
           </li>
+           <li class="nav-item  {% if request.path == '/servicios' %} active {% endif %} px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="{% url 'servicios' %}">Servicios</a>
+          </li>
          
         </ul>
       </div>
